<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.projectworkv02.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.projectworkv02.ui.watch.WatchFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_watch" />

    <fragment
        android:id="@+id/navigation_watched"
        android:name="com.example.projectworkv02.ui.watched.Watched_films"
        android:label="@string/title_watched"
        tools:layout="@layout/fragment_watched_films" />

    <fragment
        android:id="@+id/navigation_infos"
        android:name="com.example.projectworkv02.ui.infos.InfosFragment"
        android:label="@string/title_infos"
        tools:layout="@layout/fragment_infos" />

</navigation>
