<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.filmDetailes.FilmDetailes">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/detailsToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryStrong"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/watch_watched_menu"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detailsToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="12dp">

        <ImageView
            android:id="@+id/largeImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/textName"/>

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:paddingHorizontal="12dp"
            android:background="@drawable/background_title"
            android:textStyle="bold"
            android:layout_marginVertical="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/largeImage"
            app:layout_constraintBottom_toTopOf="@id/titleReleaseDate"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/titleReleaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_releasedate"
            android:textSize="18sp"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@drawable/background_black_borded_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textName"
            app:layout_constraintBottom_toTopOf="@id/textReleaseDate"
            />

        <TextView
            android:id="@+id/textReleaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="center"
            android:background="@drawable/background_black_borded_bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleReleaseDate"
            app:layout_constraintBottom_toTopOf="@id/titleDescription"/>

        <TextView
            android:id="@+id/titleDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_desctiption"
            android:textSize="18sp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textReleaseDate"
            app:layout_constraintBottom_toTopOf="@id/textDescription"/>

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="center"
            android:background="@drawable/background_black_borded_bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleDescription"
            app:layout_constraintBottom_toTopOf="@id/vote"/>

        <LinearLayout
            android:id="@id/vote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textDescription"
            app:layout_constraintBottom_toTopOf="@id/slider"
            android:orientation="horizontal"
            android:gravity="center">
        <TextView
            android:id="@+id/titleVote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_vote"
            android:textSize="18sp"
            android:textStyle="bold"
            />
        
        <TextView
            android:id="@+id/textVote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginStart="12dp"
            />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vote"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/value0_0"/>
            <SeekBar
                android:id="@+id/sliderVote"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="100" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/value10_0"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>